--- a/BloodDonation-Project.postman_collection.json
+++ b/BloodDonation-Project.postman_collection.json
@@ -197,13 +197,13 @@
 							{
 								"key": "Content-Type",
 								"name": "Content-Type",
-								"value": "application/json",
-								"type": "text"
+								"type": "text",
+								"value": "application/json"
 							}
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n\t\"user_id\" : \"445399af-307f-417f-bed1-54a62391d233\",\n\t\"blood_group\" : \"A-\",\n\t\"first_name\" : \"Alok\",\n\t\"last_name\" : \"G\",\n\t\"gender\" : \"M\",\n\t\"phone_no\" : \"1234-567-8901\",\n\t\"address\" : \"123, ABC Appt, 4th St, SJ, CA, US\",\n\t\"longitude\" : \"+80\",\n\t\"latitude\" : \"+10\"\n}",
+							"raw": "{\n\t\"user_id\" : \"445399af-307f-417f-bed1-54a62391d233\",\n\t\"blood_group\" : \"A-\",\n\t\"first_name\" : \"Alok\",\n\t\"last_name\" : \"G\",\n\t\"gender\" : \"M\",\n\t\"phone_no\" : \"1234-567-8901\",\n\t\"address\" : \"123, ABC Appt, 4th St, SJ, CA, US\",\n\t\"longitude\" : \"+20\",\n\t\"latitude\" : \"+10\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
